k8s-101/lesson-2/4/4-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: demo-ns
spec:
  rules:
    - host: nginx-first.example.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
